--- a/GymVault/templates/user/supplements.html
+++ b/GymVault/templates/user/supplements.html
@@ -52,6 +52,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="/contact">Contact Us</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/order">Order History</a>
+              </li>
               
               <!-- Search Bar -->
               <li class="nav-item">
